--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "Job Details": "Job Details",
   "Create React Project in GitHub out of a Website Template": "Create React Project in GitHub out of a Website Template",
-  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
+  "Find the Perfect Jobs, Employment & Career Opportunities.": "Find the Perfect Jobs, Employment & Career Opportunities.",
   "Github Link": "Github Link",
   "Previous comment ...": "Previous comment ...",
   "Complete Milestone": "Complete Milestone"
