--- a/src/locales/am/translation.json
+++ b/src/locales/am/translation.json
@@ -19,5 +19,39 @@
   "How Freelancer work": "ፍሪላንስ እንዴት ስለሚሆን እንደሚረዳ",
   "Create account": "መለያ ይፍጠሩ",
   "Upload Resume Here": "የስራ ልምድን እዚህ ይስቀሉ።",
-  "Add Cover Letter Here": "የሽፋን ደብዳቤ እዚህ ያክሉ"
+  "Add Cover Letter Here": "የሽፋን ደብዳቤ እዚህ ያክሉ",
+  "Join our freelancer community to connect with clients and find exciting projects.": "ከደንበኞች ጋር ለመገናኘት እና አስደሳች ፕሮጀክቶችን ለማግኘት የእኛን የፍሪላንስ ማህበረሰቦችን ይቀላቀሉ።",
+  "Showcase your skills and experience by uploading your CV/Resume.": "የእርስዎን CV/Resume በመስቀል ችሎታዎን እና ልምድዎን ያሳዩ።",
+  "Search for jobs that match your skills and interests.": "ከእርስዎ ችሎታ እና ፍላጎቶች ጋር የሚዛመዱ ስራዎችን ይፈልጉ።",
+  "Apply for jobs and start working on your terms.": "ለስራ ያመልክቱ እና በእርስዎ ውሎች ላይ መስራት ይጀምሩ።",
+  "Featured Jobs": "ተለይተው የቀረቡ ስራዎች",
+  "View All Jobs": "ሁሉንም ስራዎች ይመልከቱ",
+  "Apply Now": "አሁኑኑ ያመልክቱ",
+  "Most Popular Vacancies": "እጀግ ታዋቂ ስራዎች",
+  "Crafting captivating user experiences through innovative design and cutting-edge technology.": "በፈጠራ ንድፍ እና በቴክኖሎጂ አማካኝነት ማራኪ የተጠቃሚ ተሞክሮዎችን መፍጠር።",
+  "Building robust and scalable server-side applications to power the digital world.": "ዲጂታል አለምን ለማጎልበት ጠንካራ እና ሊለኩ የሚችሉ የአገልጋይ ጎን መተግበሪያዎችን መገንባት።",
+  "Crafting visually appealing and intuitive user interfaces to enhance digital experiences.": "ዲጂታል ልምዶችን ለማሻሻል ምስላዊ ማራኪ እና ገላጭ የተጠቃሚ በይነገጾችን መፍጠር።",
+  "Harnessing the power of machine learning and artificial intelligence to create intelligent solutions that automate tasks and drive innovation.": "ስራዎችን በራስ ሰር የሚሰሩ እና ፈጠራን የሚያንቀሳቅሱ ብልህ መፍትሄዎችን ለመፍጠር የማሽን መማር እና አርቴፊሻል ኢንተለጀንስ ሃይልን መጠቀም።",
+  "Let’s Start By Adding a Title": "ርዕስ በማከል እንጀምር",
+  "Write a title for your job post": "ለስራዎ ርዕስ ይጻፉ",
+  "Write a Description for your job post": "ለስራ ጽሁፍዎ መግለጫ ይጻፉ",
+  "Next": "ይቀጥሉ",
+  "Choose the Job Type and Budget Range": "የሥራውን ዓይነት እና የበጀት ክልልን ይምረጡ",
+  "Back": "ተመለስ",
+  "Select the type of job": "የሥራውን ዓይነት ይምረጡ",
+  "Add the budget range": "የበጀት ክልልን ያክሉ",
+  "Select Education Level": "የትምህርት ደረጃን ይምረጡ",
+  "Select the required education level": "የትምህርት ደረጃን ይምረጡ",
+  "Primary Education": "መሰረት ትምህርት",
+  "Secondary Education": "ሁለተኛ ትምህርት",
+  "Graduate Degree": "የመጀመሪያ ዲግረ",
+  "Master Degree": "የማስተማር ዲግረ",
+  "Doctorate Degree": "የዶክተር ዲግረ",
+  "Set Milestones and Job Level": "ዋና ዋና ደረጃዎችን እና የስራ ደረጃን ያዘጋጁ",
+  "Define the milestones for the job": "ስራውን ዋና ዋና ደረጃዎች ይፈጥሩ",
+  "Define the job level": "ስራውን የስራ ደረጃ ይፈጥሩ",
+  "Easy": "ቀላል",
+  "Medium": "መካከል",
+  "Hard": "ከባድ",
+  "Submit": "አስገባ"
 }
