Update branding to use "WorkWhiz" instead of "Freelancer"

--- a/src/locales/am/translation.json
+++ b/src/locales/am/translation.json
@@ -16,7 +16,7 @@
   "Become Employer": "ቀጣሪ ሁን",
   "Click here to apply and become a part of our talent pool of freelancers.": "ለማመልከት እዚህ ጠቅ ያድርጉ እና የእኛ የፍሪላነሮች ችሎታ ገንዳ አካል ይሁኑ።",
   "Click here to post your job and connect with our diverse network of skilled candidates.": "ስራዎን ለመለጠፍ እና ከተለያዩ የተካኑ እጩዎች አውታረ መረብ ጋር ለመገናኘት እዚህ ጠቅ ያድርጉ።",
-  "How Freelancer work": "ፍሪላንስ እንዴት ስለሚሆን እንደሚረዳ",
+  "How WorkWhiz work": "ፍሪላንስ እንዴት ስለሚሆን እንደሚረዳ",
   "Create account": "መለያ ይፍጠሩ",
   "Upload Resume Here": "የስራ ልምድን እዚህ ይስቀሉ።",
   "Add Cover Letter Here": "የሽፋን ደብዳቤ እዚህ ያክሉ",
